<resources>
    <string name="app_name">Adrenaline</string>
    <string name="starting_info">Discover great Tracks near you and make new friends along.</string>
    <string name="try_label">Try Without Registration</string>
    <string name="signup_label">Sign Up</string>
    <string name="login_label">Login</string>
    <string name="signup_email">Enter Email Address</string>
    <string name="signup_name">Name</string>
    <string name="signup_password">Enter Password</string>
    <string name="signup_confirm_password">Repeat Password</string>
    <string name="signup_rider">Rider</string>
    <string name="signup_business_user">Business User</string>
    <string name="company_name">Enter Company Name</string>
    <string name="user_type">Select User Type</string>
    <string name="title_activity_show_event">ShowEventActivity</string>
    <string name="title_activity_search_user">ShowFriendsActivity</string>
    <string name="title_fragment_friendlist">My Friends</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Adrenaline</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>
    <string name="header_friendslist">MY FRIENDS</string>
    <string name="hint_search_user">Name or E-Mail of User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="create_event_name">Event Name</string>
    <string name="create_event_description">Event Description</string>
    <string name="create_event_select_date">Select Date</string>
    <string name="create_event_select_time">Select Time</string>
    <string name="create_event_location">Event Location</string>
    <string name="create_event_button">Create Event</string>
    <string name="event_drawer_show_events_title">Show Events</string>
    <string name="settings">Settings</string>
    <string name="event_drawer_user_options">User Options</string>
    <string name="change_password">Change Password</string>
    <string name="create_route">Create New Route</string>

    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="postcode">Postcode</string>
    <string name="house_nr">House number</string>
    <!--
     Strings for Route creation
     -->
    <string name="route_add_text">Lets add a new route</string>
    <string name="route_name">Route name</string>
    <string name="route_description">Route description</string>
    <string name="route_start">Add a starting point for your route</string>
    <string name="route_end">Add an ending point for your route</string>
    <string name="route_add">Add route</string>
    <string name="action_logout">Logout</string>
    <string name="action_add_event">Add event</string>
    <string name="show_friends">Show Friends</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="enter_message_hint">Enter message</string>
    <string name="button_send">SEND</string>
    <string name="admin_tag">Admin</string>
    <string name="title_event_feed">Event Feed</string>
    <string name="title_route_feed">Route Feed</string>
    <string name="title_activity_business_user_main">BusinessUserMain</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="business_description">Please describe your business</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--<string name="title_cart">Cart</string>-->
    <!--<string name="title_profile">Profile</string>-->
    <!--
     Strings for Address creation
     -->
    <!--
        <string name="eventName">Enter Event Name</string>
        <string name="event_location">Enter Event Location</string>
        <string name="event_descr">Enter Event Description</string>
        <string name="event_date">Select Date</string>
        <string name="event_time">Select Time</string>
        <string name="event_create">Create Event</string>-->

</resources>
