<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
        android:id="@+id/show_events"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/event_drawer_show_events_title" />

        <item
            android:id="@+id/show_friends"
            android:icon="@drawable/ic_contacts"
            android:title="@string/show_friends" />

        <item
            android:id="@+id/create_route"
            android:icon="@drawable/ic_menu_plus"
            android:title="@string/create_route" />

    </group>

    <item android:title="@string/event_drawer_user_options">
        <menu>
            <item
                android:id="@+id/add_profile"
                android:icon="@drawable/ic_menu_share"
                android:title="Add Profile" />

            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/settings" />

            <item
                android:id="@+id/change_password"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/change_password" />


        </menu>
    </item>

</menu>
