<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/smokeyWhite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/eventname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/create_event_name"
                android:inputType="text"
                style="@style/editTextView"/>

            <EditText
                android:id="@+id/eventdescr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/eventname"
                android:hint="@string/create_event_description"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="2000"
                android:maxLines="4"
                style="@style/editTextView"/>

            <EditText
                android:id="@+id/eventdate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/eventdescr"
                android:focusableInTouchMode="false"
                android:hint="@string/create_event_select_date"
                android:inputType="date"
                style="@style/editTextView" />

            <EditText
                android:id="@+id/eventtime"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/eventdate"
                android:focusableInTouchMode="false"
                android:hint="@string/create_event_select_time"
                android:inputType="time"
                style="@style/editTextView" />


            <TextView
                android:id="@+id/eventlocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/eventtime"
                android:layout_marginStart="40dp"
                android:layout_marginTop="25dp"
                android:text="@string/create_event_location"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/eventlocation"
                android:hint="@string/country"
                android:inputType="text"
                style="@style/editTextView" />

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/country"
                android:hint="@string/city"
                android:inputType="text"
                style="@style/editTextView" />

            <EditText
                android:id="@+id/street"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/city"
                android:hint="@string/street"
                android:inputType="text"
                style="@style/editTextView" />

            <EditText
                android:id="@+id/postcode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/street"
                android:hint="@string/postcode"
                android:inputType="text"
                style="@style/editTextView" />

            <EditText
                android:id="@+id/houseNr"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/postcode"
                android:hint="@string/house_nr"
                android:inputType="text"
                style="@style/editTextView" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/postcode"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:theme="@style/Spinner"
                />


            <Button
                android:id="@+id/createEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/spinner"
                android:text="@string/create_event_button"
                style="@style/buttonCreate"/>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>